# tauri-overlay-effect

./: .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.js  vite.config.ts
docs/: migration-readiness.md  release.md
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Chapter.svelte  ChapterSettingPanel.svelte  Keyboard.svelte  Mouse.svelte
src/lib/scripts/: app-bridge.js  app-bridge.ts  app.js  app.ts  util.js  util.ts
src/routes/: +layout.js  +layout.svelte  +page.svelte  styles.css
src/routes/chapter-setting/: +page.svelte
