[package]
name = "tauri-overlay-effect"
version = "0.1.0"
description = "Overlay effect app ported to Tauri v2 and Svelte."
authors = ["simiraaaa"]
edition = "2021"

[lib]
name = "tauri_overlay_effect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }
