[package]
name = "tauri-overlay-effect"
version = "0.1.0"
description = "Overlay effect app ported to Tauri v2 and Svelte."
authors = ["simiraaaa"]
edition = "2021"

[lib]
name = "tauri_overlay_effect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }

[patch.crates-io]
rdev = { path = "vendor/rdev" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.19.0", features = ["highsierra"] }
objc2-app-kit = "0.3.2"
rdev = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
